# mysqlview

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  build.rs
backend/src/: cli.rs  cors.rs  embedded.rs  error.rs  healthcheck.rs  main.rs  sql_split.rs  state.rs  static_files.rs  validate.rs
backend/src/db/: browse.rs  ddl.rs  dynamic_row.rs  edit.rs  introspection.rs  io.rs  mod.rs
backend/src/routes/: browse.rs  databases.rs  ddl.rs  edit.rs  export.rs  health.rs  import.rs  mod.rs  query.rs  structure.rs  tables.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: api.rs  app.rs  main.rs  router.rs  state.rs  theme.rs  theme_provider.rs
frontend/src/components/: button.rs  card.rs  chip.rs  code_editor.rs  confirm_dialog.rs  csv_import.rs  data_grid.rs  database_create.rs  empty_state.rs  error_banner.rs  input.rs  mod.rs  modal.rs  nav.rs  pagination.rs  row_editor.rs  skeleton.rs  sql_import.rs  table_alter.rs  table_create.rs
frontend/src/pages/: console.rs  database.rs  home.rs  mod.rs  not_found.rs  table_browse.rs  table_structure.rs
frontend/src/util/: download.rs
types/: Cargo.toml
types/src/: browse.rs  ddl.rs  edit.rs  error.rs  import.rs  lib.rs  query.rs  schema.rs
types/tests/: roundtrip.rs
