[package]
name = "mysqlview-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local-only MySQL WebUI backend (Axum + sqlx)"

[dependencies]
mysqlview-types = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
