[package]
name = "mysqlview-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local-only MySQL WebUI backend (Axum + sqlx)"

[features]
default = []
# Embed `frontend/dist/` into the backend binary so the server can be shipped
# as a single executable. Requires `trunk build --release` to have produced
# `frontend/dist/index.html` before `cargo build` runs.
embedded-frontend = ["dep:include_dir"]

[dependencies]
mysqlview-types = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
include_dir = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
