[package]
name = "mysqlview-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local-only MySQL WebUI frontend (Yew + Tailwind)"

[dependencies]
mysqlview-types = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
gloo-net = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "KeyboardEvent",
  "Event",
] }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }
